Add back-button + minor changes

--- a/view/index.html
+++ b/view/index.html
@@ -21,7 +21,9 @@
 <body>
 
   <div id="map"></div>
-
+  <a href="/" class="float">
+    <i class="fa fa-arrow-left"></i>
+  </a>
   <div class="info-icon">
     <i class="fas fa-info-circle"></i>
   </div>
