--- a/report/style.css
+++ b/report/style.css
@@ -20,8 +20,8 @@ body {
   font-family: Arial, sans-serif;
   width: 250px;
   z-index: 1001;
-  position: fixed; /* Position the popup relative to the viewport */
-  transform: translate(-50%, -50%); /* Center the popup precisely */
+  position: fixed;
+  transform: translate(-50%, -50%);
 
 }
 
@@ -55,222 +55,249 @@ body {
 }
 
 #loading {
-position: fixed;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-background-color: rgba(0, 0, 0, 0.5);
-display: none;
-align-items: center;
-justify-content: center;
-z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
 }
 
 #loading.visible {
-display: flex;
+  display: flex;
 }
 
 .typewriter {
-font-family: Arial, sans-serif;
-font-size: 24px;
-color: white;
-overflow: hidden;
-white-space: nowrap;
-border-right: 0.15em solid white; /* Adjust the border style as needed */
-animation: typing 1.5s steps(40, end), blink-caret 0.75s step-end infinite;
+  font-family: Arial, sans-serif;
+  font-size: 24px;
+  color: white;
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 0.15em solid white;
+  /* Adjust the border style as needed */
+  animation: typing 1.5s steps(40, end), blink-caret 0.75s step-end infinite;
 }
 
 @keyframes typing {
-from {
-  width: 0;
-}
-to {
-  width: 100%;
-}
+  from {
+    width: 0;
+  }
+
+  to {
+    width: 100%;
+  }
 }
 
 @keyframes blink-caret {
-from, to {
-  border-color: transparent;
-}
-50% {
-  border-color: white; /* Change the color as needed */
-}
+
+  from,
+  to {
+    border-color: transparent;
+  }
+
+  50% {
+    border-color: white;
+    /* Change the color as needed */
+  }
 }
 
 body {
-font-family: Arial, sans-serif;
+  font-family: Arial, sans-serif;
 }
 
 #nepaliText {
-font-family: 'Preeti', Arial, sans-serif;
+  font-family: 'Preeti', Arial, sans-serif;
 }
 
 
 /* Info Icon */
 .info-icon {
-position: fixed;
-bottom: 20px;
-right: 20px;
-background-color: #3498db;
-color: white;
-padding: 10px;
-border-radius: 50%;
-cursor: pointer;
-z-index: 1000;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #3498db;
+  color: white;
+  padding: 10px;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 1000;
 }
 
 /* Info Popup/Modal */
 .info-popup {
-position: fixed;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-background-color: rgba(0, 0, 0, 0.5);
-display: flex;
-align-items: center;
-justify-content: center;
-z-index: 999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
 }
 
 .popup-content {
-background-color: #fff;
-padding: 20px;
-border-radius: 8px;
-text-align: center;
-max-width: 300px;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  max-width: 300px;
 }
 
 #closePopup {
-margin-top: 10px;
-padding: 5px 10px;
-background-color: #3498db;
-color: #fff;
-border: none;
-border-radius: 4px;
-cursor: pointer;
+  margin-top: 10px;
+  padding: 5px 10px;
+  background-color: #3498db;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 /* Style for the zoom buttons */
 #zoomIn {
-position: fixed;
-bottom: 65px;
-right: 24px;
-color: white;
-cursor: pointer;
-z-index: 1000;
-font-size: 18px;
-color:black;
-padding: 5px 10px;
-background-color: #fff;
-border: none;
-border-radius: 4px;
+  position: fixed;
+  bottom: 65px;
+  right: 24px;
+  color: white;
+  cursor: pointer;
+  z-index: 1000;
+  font-size: 18px;
+  color: black;
+  padding: 5px 10px;
+  background-color: #fff;
+  border: none;
+  border-radius: 4px;
 }
 
 #zoomOut {
-position: fixed;
-bottom: 100px;
-right: 24px;
-color: white;
-cursor: pointer;
-z-index: 1000;
-font-size: 18px;
-color:black;
-padding: 5px 12px;
-background-color: #fff;
-border: none;
-border-radius: 4px;
+  position: fixed;
+  bottom: 100px;
+  right: 24px;
+  color: white;
+  cursor: pointer;
+  z-index: 1000;
+  font-size: 18px;
+  color: black;
+  padding: 5px 12px;
+  background-color: #fff;
+  border: none;
+  border-radius: 4px;
 }
 
 #zoomIn:hover {
-background-color: #3498db;
+  background-color: #3498db;
 }
+
 #zoomOut:hover {
-background-color: #3498db;
+  background-color: #3498db;
 }
 
 /*Form*/
 
-/* Styling for the form popup container */
+
 #popupFormContainer {
-display: none; /* Hide the form container by default */
-position: fixed;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
-background-color: rgba(255, 255, 255);
-padding: 20px;
-border-radius: 8px;
-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-font-family: Arial, sans-serif;
-width: 300px;
-z-index: 1002;
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255);
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  font-family: Arial, sans-serif;
+  width: 300px;
+  z-index: 1002;
 }
 
-/* Styling for the form elements */
 #popupFormContainer p {
-margin: 0 0 10px;
+  margin: 0 0 10px;
 }
 
 #popupFormContainer label {
-display: block;
-margin-bottom: 5px;
+  display: block;
+  margin-bottom: 5px;
 }
 
 #popupFormContainer input[type="text"],
 #popupFormContainer textarea,
 #popupFormContainer input[type="file"] {
-width: 100%;
-padding: 5px;
-margin-bottom: 10px;
-border: 1px solid #ccc;
-border-radius: 4px;
-box-sizing: border-box;
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
 
 #popupFormContainer hr {
-margin: 10px 0;
-border: none;
-border-top: 1px solid #ccc;
+  margin: 10px 0;
+  border: none;
+  border-top: 1px solid #ccc;
 }
 
 #popupFormContainer #closeform {
-background-color: #D7504C;
-color: white;
-padding: 8px 12px;
-border: none;
-border-radius: 4px;
-cursor: pointer;
-width: 100%;
+  background-color: #D7504C;
+  color: white;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%;
 }
 
 #popupFormContainer #closeform:hover {
-background-color: #111111;
+  background-color: #111111;
 }
+
 #popupFormContainer #saveform {
-background-color: #3498db;
-color: white;
-padding: 8px 12px;
-border: none;
-border-radius: 4px;
-cursor: pointer;
-width: 100%;
+  background-color: #3498db;
+  color: white;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%;
 }
 
 #popupFormContainer #saveform:hover {
-background-color: #111111;
+  background-color: #111111;
 }
 
-/* Styling for the form buttons */
 .popup-form .row {
-display: flex;
-justify-content: space-between;
-margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
 }
 
 .popup-form .col {
-flex-basis: 48%;
+  flex-basis: 48%;
+}
+
+
+
+.float {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  top: 40px;
+  left: 40px;
+  background-color: #fff;
+  color: #e67129;
+  border-radius: 10px;
+  /* text-align: center; */
+  text-decoration: none;
+  outline: 2px solid #e67129;
+}
+.float i{
+  font-size: 36px;
+  margin-top: 11px;
+  margin-left: 12.5px;
 }
